2008-04-21  Tor Lillqvist  <tml@novell.com>

	Bug 528752 - Win32 build and SSL not working

	This bug report against libsoup points out an issue with the use
	of bitfields in the GIOChannel struct that should really be taken
	care of here in GLib.

	* configure.in: Add Autoconf variable GLIB_EXTRA_CFLAGS which will
	contain the -mms-bitfields flag on Windows.
	
	* glib-2.0.pc.in: Add it to Cflags.

2008-04-21  Tor Lillqvist  <tml@novell.com>

	* configure.in
	* */Makefile.am: More work on enabling static building on
	Windows. When building statically: Also define
	GOBJECT_STATIC_COMPILATION in glibconfig.h so that also the
	variables in gparamspecs.h get declared without any
	dllimport/dllexport decorations. Don't install .def files which
	obviously have no meaning for static libraries. Don't create MS
	import libraries. Don't do any resource object files.

2008-04-18 17:40:58  Tim Janik  <timj@imendio.com>

	* tests/testglib.c: fixed gstdio.h include.

	* tests/Makefile.am: properly list testglib.c SOURCES.

2008-04-17  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gchecksum.c:
	(sha_byte_reverse): Use the macro GLib provides for byte-swapping
	as it can be optimized.
	
	(g_checksum_update): Fix a compiler warning.

2008-04-15  Mukund Sivaraman  <muks@mukund.org>

	* gio/gfile.c: Fixed typos in gtk-doc comments.

2008-04-10  Mathias Hasselmann  <mathias@openismus.com>

	Bug 519137 – g_slice_dup macro needs cast for 64-bit platform

	* glib/gslice.h (g_slice_copy): Apply type casts needed
	  for proper compilation on 64-bit platforms.

2008-04-09  Federico Mena Quintero  <federico@novell.com>

	* glib/gbookmarkfile.c (bookmark_metadata_free): Don't leak
	the apps_by_name hash table if the applications list is empty.

2008-04-08  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gunicode.h: Add ISO 15924 code comments for new scripts.

2008-04-07  Matthias Clasen  <mclasen@redhat.com>

	Bug 491554 – Update to Unicode 5.1.0

	* glib/gunichartables.h:
	* glib/gunicode.h: